Palette update + button theme update

--- a/apps/sistema-demo/src/app/sistema-pages/sistema-palette/sistema-palette.component.html
+++ b/apps/sistema-demo/src/app/sistema-pages/sistema-palette/sistema-palette.component.html
@@ -27,14 +27,8 @@
         <div class="color-dark-stronger"></div>
         <small>$color-dark-stronger</small>
       </div>
-      <div>
-        <div class="color-dark-strong"></div>
-        <small>$color-dark-strong</small>
-      </div>
-      <div>
-        <div class="color-dark-regular"></div>
-        <small>$color-dark-regular</small>
-      </div>
+      <div></div>
+      <div></div>
       <div></div>
       <div></div>
       <div></div>
@@ -56,7 +50,10 @@
         <div><strong>Neutral</strong></div>
       </div>
       <div></div>
-      <div></div>
+      <div>
+        <div class="color-neutral-strong"></div>
+        <small>$color-neutral-strong</small>
+      </div>
       <div>
         <div class="color-neutral-regular"></div>
         <small>$color-neutral-regular</small>
