--- a/apps/sistema-demo/src/app/sistema-pages/sistema-palette/sistema-palette.component.scss
+++ b/apps/sistema-demo/src/app/sistema-pages/sistema-palette/sistema-palette.component.scss
@@ -1,8 +1,5 @@
 @import "variables";
 
-.color-dark-strong {
-  background-color: $color-dark-strong;
-}
-.color-dark-regular {
-  background-color: $color-dark-regular;
+.color-neutral-strong {
+  background-color: $color-neutral-strong;
 }
