--- a/libs/sistema/theme/_palette.tokens.scss
+++ b/libs/sistema/theme/_palette.tokens.scss
@@ -2,35 +2,34 @@
 // PALETTE
 // =================================================
 $color-dark-stronger: #000;
-$color-dark-strong:   hsl(0, 0%, 18%); // #2D2D2D;
-$color-dark-regular:   hsl(0, 0%, 44%); // #2D2D2D;
 
-$color-light-stronger: #fff; //  #fff;
+$color-light-stronger: #fff;
 
-$color-neutral-regular: hsl(0, 0%, 77%);   // #C4C4C4;
-$color-neutral-light:   hsl(0, 0%, 90%);   // #E5E5E5;
-$color-neutral-lighter: hsl(0, 0%, 94%);   // #EFEFEF;
-$color-neutral-lightest:hsl(240, 7%, 97%); // #F7F7F8;
+$color-neutral-strong: hsl(0, 0%, 44%);
+$color-neutral-regular: hsl(0, 0%, 77%);
+$color-neutral-light:   hsl(0, 0%, 90%);
+$color-neutral-lighter: hsl(0, 0%, 94%);
+$color-neutral-lightest:hsl(240, 7%, 97%);
 
-$color-primary-stronger:    hsl(336, 100%, 28%);
+$color-primary-stronger:    hsl(336, 100%, 24%);
 $color-primary-strong:      hsl(336, 100%, 36%);
 $color-primary-regular:     hsl(336, 100%, 50%); // #FF0066
-$color-primary-light:       hsl(336, 100%, 75%);
-$color-primary-lighter:     hsl(336, 100%, 90%); // #FFCADF
+$color-primary-light:       hsl(336, 100%, 73%);
+$color-primary-lighter:     hsl(336, 100%, 90%); // #FFA8CB
 $color-primary-lightest:    hsl(336, 100%, 96%);
 
 // Secondary
-$color-secondary-stronger:  hsl(249, 100%, 26%);
-$color-secondary-strong:    hsl(249, 100%, 38%);
-$color-secondary-regular:   hsl(249, 100%, 50%); // #2500FF (from logo)
-$color-secondary-light:     hsl(249, 100%, 68%);
-$color-secondary-lighter:   hsl(249, 100%, 80%);
-$color-secondary-lightest:  hsl(249, 100%, 87%);
+$color-secondary-stronger:  hsl(51, 78%, 32%);
+$color-secondary-strong:    hsl(51, 100%, 41%);
+$color-secondary-regular:   hsl(51, 100%, 55%); // #FFDD1A
+$color-secondary-light:     hsl(51, 100%, 75%);
+$color-secondary-lighter:   hsl(51, 100%, 86%);
+$color-secondary-lightest:  hsl(51, 100%, 95%);
 
 // Tertiary
-$color-tertiary-stronger:   hsl(51, 100%, 25%);
-$color-tertiary-strong:     hsl(51, 100%, 39%);
-$color-tertiary-regular:    hsl(51, 100%, 55%); // #FFDC1B
-$color-tertiary-light:      hsl(51, 100%, 74%);
-$color-tertiary-lighter:    hsl(51, 100%, 85%);
-$color-tertiary-lightest:   hsl(51, 100%, 91%);
+$color-tertiary-stronger:   hsl(249, 100%, 24%);
+$color-tertiary-strong:     hsl(249, 100%, 40%);
+$color-tertiary-regular:    hsl(249, 100%, 50%); // #2600FF
+$color-tertiary-light:      hsl(249, 100%, 65%);
+$color-tertiary-lighter:    hsl(249, 100%, 92%);
+$color-tertiary-lightest:   hsl(249, 100%, 96%);
