Add tooltips to bar charts

--- a/apps/app/src/app/account/account-home/account-home.component.html
+++ b/apps/app/src/app/account/account-home/account-home.component.html
@@ -14,7 +14,8 @@
         <app-bar-chart [data]="(processing | async) || []"
                        [threshold]="300000000"
                        [axisYMultiplier]="1"
-                       [height]="320"></app-bar-chart>
+                       [height]="320"
+                       [tooltipEnabled]="true"></app-bar-chart>
       </div>
     </div>
 
