--- a/libs/sistema/theme/_toasts.tokens.scss
+++ b/libs/sistema/theme/_toasts.tokens.scss
@@ -1,7 +1,7 @@
 @import "palette.tokens";
 
-$background-toast-error: $color-primary-stronger;
-$color-toast-error: $color-light-stronger;
+$background-toast-error: $color-secondary-regular;
+$color-toast-error: $color-dark-stronger;
 
 $background-toast-warning: $color-dark-stronger;
 $color-toast-warning: $color-light-stronger;
