--- a/libs/sistema/theme/_menu.tokens.scss
+++ b/libs/sistema/theme/_menu.tokens.scss
@@ -1,3 +1,3 @@
 @import "palette.tokens";
 
-$color-text-menu-option-destructive: $color-primary-stronger;
+$color-text-menu-option-destructive: $color-secondary-stronger;
