Be able to download a Json file from a document [sc-1649]
Adding an option to download Algolia JSON from the resource list

--- a/apps/app/src/app/resources/resource-list.component.html
+++ b/apps/app/src/app/resources/resource-list.component.html
@@ -160,6 +160,10 @@
                       (click)="reindex(resource)">
                 {{ 'generic.reindex' | translate }}
               </button>
+              <button mat-menu-item
+                      (click)="downloadAlgoliaJson(resource)">
+                {{'generic.download_algolia_json' | translate}}
+              </button>
             </mat-menu>
           </td>
         </ng-container>
