--- a/libs/sistema/theme/_source-sans-pro.scss
+++ b/libs/sistema/theme/_source-sans-pro.scss
@@ -1,11 +1,13 @@
 /* source-sans-pro-300 - latin */
+$font-path: '../assets/fonts';
+
 @font-face {
   font-family: 'Source Sans Pro';
   font-style: normal;
   font-weight: 300;
   src: local('Source Sans Pro Light'), local('SourceSansPro-Light'),
-    url('/assets/fonts/source-sans-pro/source-sans-pro-v13-latin-300.woff2') format('woff2'),
-    url('/assets/fonts/source-sans-pro/source-sans-pro-v13-latin-300.woff') format('woff');
+    url($font-path + '/source-sans-pro/source-sans-pro-v13-latin-300.woff2') format('woff2'),
+    url($font-path + '/source-sans-pro/source-sans-pro-v13-latin-300.woff') format('woff');
 }
 
 /* source-sans-pro-300italic - latin */
@@ -14,8 +16,8 @@
   font-style: italic;
   font-weight: 300;
   src:
-    url('/assets/fonts/source-sans-pro/source-sans-pro-v14-latin-300italic.woff2') format('woff2'),
-    url('/assets/fonts/source-sans-pro/source-sans-pro-v14-latin-300italic.woff') format('woff');
+    url($font-path + '/source-sans-pro/source-sans-pro-v14-latin-300italic.woff2') format('woff2'),
+    url($font-path + '/source-sans-pro/source-sans-pro-v14-latin-300italic.woff') format('woff');
   }
 
 /* source-sans-pro-regular - latin */
@@ -24,8 +26,8 @@
   font-style: normal;
   font-weight: 400;
   src: local('Source Sans Pro Regular'), local('SourceSansPro-Regular'),
-    url('/assets/fonts/source-sans-pro/source-sans-pro-v13-latin-regular.woff2') format('woff2'),
-    url('/assets/fonts/source-sans-pro/source-sans-pro-v13-latin-regular.woff') format('woff');
+    url($font-path + '/source-sans-pro/source-sans-pro-v13-latin-regular.woff2') format('woff2'),
+    url($font-path + '/source-sans-pro/source-sans-pro-v13-latin-regular.woff') format('woff');
 }
 
 /* source-sans-pro-italic - latin */
@@ -34,8 +36,8 @@
   font-style: italic;
   font-weight: 400;
   src: local('Source Sans Pro Italic'), local('SourceSansPro-Italic'),
-    url('/assets/fonts/source-sans-pro/source-sans-pro-v13-latin-italic.woff2') format('woff2'),
-    url('/assets/fonts/source-sans-pro/source-sans-pro-v13-latin-italic.woff') format('woff');
+    url($font-path + '/source-sans-pro/source-sans-pro-v13-latin-italic.woff2') format('woff2'),
+    url($font-path + '/source-sans-pro/source-sans-pro-v13-latin-italic.woff') format('woff');
 }
 
 /* source-sans-pro-700 - latin */
@@ -44,15 +46,15 @@
   font-style: normal;
   font-weight: 700;
   src: local('Source Sans Pro Bold'), local('SourceSansPro-Bold'),
-    url('/assets/fonts/source-sans-pro/source-sans-pro-v13-latin-700.woff2') format('woff2'),
-    url('/assets/fonts/source-sans-pro/source-sans-pro-v13-latin-700.woff') format('woff');
+    url($font-path + '/source-sans-pro/source-sans-pro-v13-latin-700.woff2') format('woff2'),
+    url($font-path + '/source-sans-pro/source-sans-pro-v13-latin-700.woff') format('woff');
 }
 
 @font-face {
   font-family: 'Source Sans Pro';
   src:
-      url('/assets/fonts/source-sans-pro/SourceSansPro-SemiBold.woff2') format('woff2'),
-      url('/assets/fonts/source-sans-pro/SourceSansPro-SemiBold.woff') format('woff');
+      url($font-path + '/source-sans-pro/SourceSansPro-SemiBold.woff2') format('woff2'),
+      url($font-path + '/source-sans-pro/SourceSansPro-SemiBold.woff') format('woff');
   font-weight: 600;
   font-style: normal;
 }
@@ -61,13 +63,13 @@
   font-family: 'Source Sans Pro';
   font-style: italic;
   font-weight: 600;
-  src: url('/assets/fonts/source-sans-pro/source-sans-pro-v14-latin-600italic.woff2') format('woff2'),
-       url('/assets/fonts/source-sans-pro/source-sans-pro-v14-latin-600italic.woff') format('woff');
+  src: url($font-path + '/source-sans-pro/source-sans-pro-v14-latin-600italic.woff2') format('woff2'),
+       url($font-path + '/source-sans-pro/source-sans-pro-v14-latin-600italic.woff') format('woff');
 }
 @font-face {
   font-family: 'Source Sans Pro';
   font-style: italic;
   font-weight: 700;
-  src: url('/assets/fonts/source-sans-pro/source-sans-pro-v14-latin-700italic.woff2') format('woff2'),
-       url('/assets/fonts/source-sans-pro/source-sans-pro-v14-latin-700italic.woff') format('woff');
+  src: url($font-path + '/source-sans-pro/source-sans-pro-v14-latin-700italic.woff2') format('woff2'),
+       url($font-path + '/source-sans-pro/source-sans-pro-v14-latin-700italic.woff') format('woff');
 }
