--- a/libs/sistema/theme/_menu.tokens.scss
+++ b/libs/sistema/theme/_menu.tokens.scss
@@ -1,3 +1,5 @@
 @import "palette.tokens";
 
 $color-text-menu-option-destructive: $color-secondary-stronger;
+$color-background-menu-option-destructive-hover: $color-secondary-lightest;
+$color-background-menu-option-destructive-active: $color-secondary-lighter;
