--- a/apps/app/src/app/components/stash-navbar/stash-navbar.component.html
+++ b/apps/app/src/app/components/stash-navbar/stash-navbar.component.html
@@ -140,6 +140,16 @@
           </a>
         </div>
       </div>
+      <div class="nav-group"
+           *ngIf="kb | async">
+        <div class="group-items">
+          <a [routerLink]="kbUrl"
+             class="nav-link">
+            <svg-icon src="assets/icons/home.svg"></svg-icon>
+            <span class="nav-link-title">{{ 'generic.back' | translate }}</span>
+          </a>
+        </div>
+      </div>
     </div>
   </div>
 </div>
