--- a/apps/app/src/app/resources/edit/profile.component.html
+++ b/apps/app/src/app/resources/edit/profile.component.html
@@ -53,3 +53,12 @@
     </div>
   </div>
 </form>
+<ncom-hint label="How to modify a resource with the API"
+           [values]="hintValues | async">
+  <pre><code class="highlight">curl $$RESOURCE$$ \
+ -X PATCH \
+ -H "authorization: Bearer $$AUTH_TOKEN$$" \
+ --data-raw '$$DATA$$'</code></pre>
+  <a href="https://docs.nuclia.dev/docs/api#operation/Modify_Resource_kb__kbid__resource__rid__patch"
+     target="_new">Learn more</a>
+</ncom-hint>
