--- a/apps/app/src/app/upload/upload-files/upload-files.component.html
+++ b/apps/app/src/app/upload/upload-files/upload-files.component.html
@@ -118,7 +118,7 @@
      -X POST \
      -H "authorization: Bearer $$AUTH_TOKEN$$" \
      -T /path/to/file</code></pre>
-      <p>Note: the authorization token here will expired, if you want a long-term approach, you should use a service
+      <p>Note: the authorization token here will expired. If you want a long-term approach, you should use a service
         access token and put it in the <code>X-STF-Serviceaccount</code> header.</p>
       <a href="https://docs.nuclia.dev/docs/quick-start/push#api-push-contents-using-the-api"
          target="_new">Learn more</a>
