--- a/apps/app/src/app/components/hint/hint.component.scss
+++ b/apps/app/src/app/components/hint/hint.component.scss
@@ -21,7 +21,7 @@
   align-items: center;
   color: $gray-contrast;
   svg-icon {
-    transition: transform 0.2s;
+    transition: transform 0.2s ease-in-out;
     display: inline-block;
     margin-right: rythm(0.5);
 
