--- a/apps/app/src/app/knowledge-box/service-access/service-access.component.html
+++ b/apps/app/src/app/knowledge-box/service-access/service-access.component.html
@@ -116,7 +116,8 @@
   </div>
 </div>
 <ncom-hint label="How to use your service access token in the API">
-  <p>The service access token can use on any call to the API. It goes in the <code>X-STF-Serviceaccount</code> header
+  <p>The service access token can be used on any call to the API. It goes in the <code>X-STF-Serviceaccount</code>
+    header
     and replaces the <code>Authorization</code> header</p>
   <pre><code class="highlight">curl $$KB_URL$$/upload \
  -X POST \
