--- a/apps/app/src/app/knowledge-box/knowledge-box-profile/knowledge-box-profile.component.html
+++ b/apps/app/src/app/knowledge-box/knowledge-box-profile/knowledge-box-profile.component.html
@@ -10,12 +10,41 @@
            fxLayout="row">
         <label class="kb-field-name mt-12"
                fxFlex="30%">
+          {{ 'generic.uid' | translate }}
+        </label>
+        <div fxFlex="70%">
+          <stf-input formControlName="uid"
+                     theme="white"
+                     [readonly]="true"
+                     [isLessen]="true">
+          </stf-input>
+        </div>
+      </div>
+
+      <div class="mb-24"
+           fxLayout="row">
+        <label class="kb-field-name mt-12"
+               fxFlex="30%">
+          {{ 'generic.slug' | translate }}
+        </label>
+        <div fxFlex="70%">
+          <stf-input formControlName="slug"
+                     [validator]="kbForm.controls['slug']"
+                     [validation_messages]="validationMessages.slug"
+                     theme="white"
+                     [isLessen]="true">
+          </stf-input>
+        </div>
+      </div>
+
+      <div class="mb-24"
+           fxLayout="row">
+        <label class="kb-field-name mt-12"
+               fxFlex="30%">
           {{ 'generic.name' | translate }}
         </label>
         <div fxFlex="70%">
           <stf-input formControlName="title"
-                     [validator]="kbForm.controls['title']"
-                     [validation_messages]="validationMessages.title"
                      theme="white"
                      [isLessen]="true">
           </stf-input>
@@ -34,22 +63,6 @@
           </stf-textarea>
         </div>
       </div>
-
-      <!-- <hr />
-
-      <h2>{{ 'stash.create.anonymization' | translate }}</h2>
-      <div class="grid">
-        <svg-icon src="assets/icons/toast-warning.svg"></svg-icon>
-        <div class="warning">{{ 'stash.create.anonymization-warning' | translate }}</div>
-        <div class="one-col">{{ 'stash.create.anonymization-help' | translate }}</div>
-        <stf-checkbox class="one-col toggle-anonymisation"
-                      [selected]="useAnonymization"
-                      (selectedChange)="changeAnonymization($event)">{{ (useAnonymization ? 'generic.enabled' :
-          'generic.disabled') |
-          translate }}</stf-checkbox>
-      </div>
-
-      <hr /> -->
 
       <div class="mt-40"
            fxLayout="row">
