--- a/apps/app/src/app/account/account-nua/nua-activity/nua-activity.component.html
+++ b/apps/app/src/app/account/account-nua/nua-activity/nua-activity.component.html
@@ -5,18 +5,18 @@
   </header>
 
   <div class="activity-container">
-    <table cdk-table [dataSource]="activity">
+    <table cdk-table [dataSource]="activity | async">
       <ng-container cdkColumnDef="file">
         <th cdk-header-cell *cdkHeaderCellDef>{{'activity.resource' | translate}}</th>
-        <td cdk-cell *cdkCellDef="let activity">{{activity.file}}</td>
+        <td cdk-cell *cdkCellDef="let activity">{{activity.resourceId | async}}</td>
       </ng-container>
       <ng-container cdkColumnDef="timestamp">
         <th cdk-header-cell *cdkHeaderCellDef>{{'activity.timestamp' | translate}}</th>
-        <td cdk-cell *cdkCellDef="let activity">{{activity.timestamp}}</td>
+        <td cdk-cell *cdkCellDef="let activity">{{activity.timestamp | formatDate}} {{activity.timestamp | formatTime}}</td>
       </ng-container>
       <ng-container cdkColumnDef="actor">
         <th cdk-header-cell *cdkHeaderCellDef>{{'activity.actor' | translate}}</th>
-        <td cdk-cell *cdkCellDef="let activity">{{activity.actor}}</td>
+        <td cdk-cell *cdkCellDef="let activity">{{activity.userId | async}}</td>
       </ng-container>
 
       <tr cdk-header-row *cdkHeaderRowDef="displayedColumns"></tr>
