Add load more button on activity page

--- a/apps/app/src/app/account/account-nua/nua-activity/nua-activity.component.html
+++ b/apps/app/src/app/account/account-nua/nua-activity/nua-activity.component.html
@@ -22,5 +22,12 @@
       <tr cdk-header-row *cdkHeaderRowDef="displayedColumns"></tr>
       <tr cdk-row *cdkRowDef="let row; columns: displayedColumns"></tr>
     </table>
+
+    <div class="load-more">
+      <stf-button *ngIf="(hasMore | async) === true"
+                  (click)="loadMoreActivity()"
+                  color="gray"
+                  padding="pd-l">{{ 'activity.load-more' | translate }}</stf-button>
+    </div>
   </div>
 </div>
