Improve sistema theme structure

--- a/apps/sistema-demo/src/pastanaga-component-overrides.scss
+++ b/apps/sistema-demo/src/pastanaga-component-overrides.scss
@@ -1,19 +1,1 @@
-/*
-overrides for
-    theme/avatar
-    theme/body
-    theme/button
-    theme/menu
-    theme/textfield
-    theme/toggle
-    theme/tabs
-    theme/tables
-    …
- */
-@import "../../../libs/sistema/theme/buttons.tokens";
-@import "../../../libs/sistema/theme/chips.tokens";
-@import "../../../libs/sistema/theme/menu.tokens";
-@import "../../../libs/sistema/theme/table.tokens";
-@import "../../../libs/sistema/theme/textfield.tokens";
-@import "../../../libs/sistema/theme/toasts.tokens";
-@import "../../../libs/sistema/theme/toggle.tokens";
+@import "../../../libs/sistema/theme/pastanaga-component-overrides";
