--- a/libs/sistema/theme/fonts/_source-sans-pro.scss
+++ b/libs/sistema/theme/fonts/_source-sans-pro.scss
@@ -1,5 +1,5 @@
 /* source-sans-pro-300 - latin */
-$font-path: '../assets/fonts';
+$font-path: '../../assets/fonts';
 
 @font-face {
   font-family: 'Source Sans Pro';
