--- a/libs/sistema/theme/tokens/_buttons.tokens.scss
+++ b/libs/sistema/theme/tokens/_buttons.tokens.scss
@@ -1,5 +1,5 @@
-@import "palette.tokens";
-@import "../../pastanaga-angular/projects/pastanaga-angular/src/styles/theme/spacing.tokens";
+@import "./palette.tokens";
+@import "../../../pastanaga-angular/projects/pastanaga-angular/src/styles/theme/spacing.tokens";
 
 //=====================================
 // BUTTONS
