--- a/libs/sistema/theme/tokens/_table.tokens.scss
+++ b/libs/sistema/theme/tokens/_table.tokens.scss
@@ -1,4 +1,4 @@
-@import "palette.tokens";
+@import "./palette.tokens";
 
 $color-text-table-header: $color-dark-stronger;
 $color-text-table-header-row: $color-dark-stronger;
