--- a/libs/sistema/theme/tokens/_toasts.tokens.scss
+++ b/libs/sistema/theme/tokens/_toasts.tokens.scss
@@ -1,4 +1,4 @@
-@import "palette.tokens";
+@import "./palette.tokens";
 
 $background-toast-error: $color-secondary-regular;
 $color-toast-error: $color-dark-stronger;
