--- a/apps/sistema-demo/src/pastanaga-core-overrides.scss
+++ b/apps/sistema-demo/src/pastanaga-core-overrides.scss
@@ -1,13 +1,1 @@
-/*
-overrides for:
-    theme/palette
-    theme/shadows
-    theme/spacing
-    theme/typography
-    theme/z-index
-    theme/layout
-    theme/scrollbar
- */
-
-@import "../../../libs/sistema/theme/typography.tokens";
-@import "../../../libs/sistema/theme/scrollbar.tokens";
+@import "../../../libs/sistema/theme/pastanaga-core-overrides";
