--- a/libs/sistema/theme/_pastanaga-core-overrides.scss
+++ b/libs/sistema/theme/_pastanaga-core-overrides.scss
@@ -8,5 +8,5 @@ overrides for:
     theme/layout
     theme/scrollbar
  */
-@import "tokens/typography.tokens";
-@import "tokens/scrollbar.tokens";
+@import 'tokens/typography.tokens';
+@import 'tokens/scrollbar.tokens';
