--- a/libs/sistema/theme/tokens/_menu.tokens.scss
+++ b/libs/sistema/theme/tokens/_menu.tokens.scss
@@ -1,4 +1,4 @@
-@import "./palette.tokens";
+@import './palette.tokens';
 
 $color-text-menu-option-destructive: $color-secondary-stronger;
 $color-background-menu-option-destructive-hover: $color-secondary-lightest;
