--- a/apps/sistema-demo/src/pastanaga-component-overrides.scss
+++ b/apps/sistema-demo/src/pastanaga-component-overrides.scss
@@ -1,1 +1,1 @@
-@import "../../../libs/sistema/theme/pastanaga-component-overrides";
+@import '../../../libs/sistema/theme/pastanaga-component-overrides';
