--- a/apps/sistema-demo/src/styles.scss
+++ b/apps/sistema-demo/src/styles.scss
@@ -2,7 +2,6 @@
 @import '../../../libs/pastanaga-angular/projects/pastanaga-angular/src/styles/core';
 @import '../../../libs/pastanaga-angular/projects/pastanaga-angular/src/styles/grid';
 
-
 .form-field-config {
   .state-option {
     display: flex;
@@ -21,7 +20,11 @@
 }
 .component {
   display: flex;
-  pa-input, pa-select, pa-textarea, ul, form {
+  pa-input,
+  pa-select,
+  pa-textarea,
+  ul,
+  form {
     flex: 1;
   }
   li {
