--- a/libs/sistema/theme/_pastanaga-component-overrides.scss
+++ b/libs/sistema/theme/_pastanaga-component-overrides.scss
@@ -10,10 +10,10 @@ overrides for
     theme/tables
     …
  */
-@import "tokens/buttons.tokens";
-@import "tokens/chips.tokens";
-@import "tokens/menu.tokens";
-@import "tokens/table.tokens";
-@import "tokens/textfield.tokens";
-@import "tokens/toasts.tokens";
-@import "tokens/toggle.tokens";
+@import 'tokens/buttons.tokens';
+@import 'tokens/chips.tokens';
+@import 'tokens/menu.tokens';
+@import 'tokens/table.tokens';
+@import 'tokens/textfield.tokens';
+@import 'tokens/toasts.tokens';
+@import 'tokens/toggle.tokens';
