--- a/libs/sistema/theme/fonts/_source-sans-pro.scss
+++ b/libs/sistema/theme/fonts/_source-sans-pro.scss
@@ -15,10 +15,9 @@ $font-path: '../../assets/fonts';
   font-family: 'Source Sans Pro';
   font-style: italic;
   font-weight: 300;
-  src:
-    url($font-path + '/source-sans-pro/source-sans-pro-v14-latin-300italic.woff2') format('woff2'),
+  src: url($font-path + '/source-sans-pro/source-sans-pro-v14-latin-300italic.woff2') format('woff2'),
     url($font-path + '/source-sans-pro/source-sans-pro-v14-latin-300italic.woff') format('woff');
-  }
+}
 
 /* source-sans-pro-regular - latin */
 @font-face {
@@ -52,9 +51,8 @@ $font-path: '../../assets/fonts';
 
 @font-face {
   font-family: 'Source Sans Pro';
-  src:
-      url($font-path + '/source-sans-pro/SourceSansPro-SemiBold.woff2') format('woff2'),
-      url($font-path + '/source-sans-pro/SourceSansPro-SemiBold.woff') format('woff');
+  src: url($font-path + '/source-sans-pro/SourceSansPro-SemiBold.woff2') format('woff2'),
+    url($font-path + '/source-sans-pro/SourceSansPro-SemiBold.woff') format('woff');
   font-weight: 600;
   font-style: normal;
 }
@@ -64,12 +62,12 @@ $font-path: '../../assets/fonts';
   font-style: italic;
   font-weight: 600;
   src: url($font-path + '/source-sans-pro/source-sans-pro-v14-latin-600italic.woff2') format('woff2'),
-       url($font-path + '/source-sans-pro/source-sans-pro-v14-latin-600italic.woff') format('woff');
+    url($font-path + '/source-sans-pro/source-sans-pro-v14-latin-600italic.woff') format('woff');
 }
 @font-face {
   font-family: 'Source Sans Pro';
   font-style: italic;
   font-weight: 700;
   src: url($font-path + '/source-sans-pro/source-sans-pro-v14-latin-700italic.woff2') format('woff2'),
-       url($font-path + '/source-sans-pro/source-sans-pro-v14-latin-700italic.woff') format('woff');
+    url($font-path + '/source-sans-pro/source-sans-pro-v14-latin-700italic.woff') format('woff');
 }
