--- a/libs/sistema/theme/tokens/_textfield.tokens.scss
+++ b/libs/sistema/theme/tokens/_textfield.tokens.scss
@@ -1,4 +1,4 @@
-@import "./palette.tokens";
+@import './palette.tokens';
 
 //=====================================
 // COLORS
@@ -11,7 +11,6 @@ $color-caret-field-control-error: $color-secondary-strong;
 
 $color-background-field-error: $color-secondary-lightest;
 
-
 //=====================================
 // BORDERS
 //=====================================
@@ -20,4 +19,3 @@ $border-field-regular: 1px solid $color-neutral-regular;
 $border-field-error: 1px solid $color-secondary-regular;
 $border-field-error-hover: 1px solid $color-secondary-regular;
 $border-field-error-active: 1px solid $color-secondary-regular;
-
