--- a/libs/sistema/theme/tokens/_toggle.tokens.scss
+++ b/libs/sistema/theme/tokens/_toggle.tokens.scss
@@ -1,4 +1,4 @@
-@import "./palette.tokens";
+@import './palette.tokens';
 
 $color-background-toggle-selected: $color-dark-stronger;
 $color-background-toggle-selected-hover: $color-neutral-strong;
@@ -9,4 +9,3 @@ $color-border-toggle-unselected: $color-dark-stronger;
 $color-border-toggle-unselected-disabled: $color-neutral-light;
 
 $color-check-toggle-disabled: $color-light-stronger;
-
