Add options to label sets

--- a/apps/app/src/app/components/label/label-select/label-select.component.html
+++ b/apps/app/src/app/components/label/label-select/label-select.component.html
@@ -14,6 +14,7 @@
             <stf-checkbox [selected]="isSelected({labelset: labelSet.key, label: label.title})"
                           (selectedChange)="changeSelected({labelset: labelSet.key, label: label.title}, $event)"
                           color="dark"
+                          [type]="labelSet.value.multiple ? 'checkbox' : 'radio'"
                           size="small">
               {{ label.title }}
             </stf-checkbox>
