--- a/apps/app/src/app/ontologies/ontology/color-picker/color-picker.component.html
+++ b/apps/app/src/app/ontologies/ontology/color-picker/color-picker.component.html
@@ -13,8 +13,7 @@
     [class.selected]="isSameHexColor(color, value)"
     [attr.aria-pressed]="isSameHexColor(color, value)"
     [style.background-color]="color"
-    [style.color]="getTextColor(color)"
-    [style.border-color]="getBorderColor(color)">
+    [style.color]="getTextColor(color)">
     <span>a</span>
   </button>
 </div>
