--- a/libs/sistema/theme/tokens/_buttons.tokens.scss
+++ b/libs/sistema/theme/tokens/_buttons.tokens.scss
@@ -7,6 +7,16 @@
 // Borders
 $border-radius-button: rhythm(0.5);
 
+// Sizes
+$padding-button-medium: rhythm(.5) rhythm(2);
+$padding-button-large: rhythm(1) rhythm(2);
+
+$padding-button-icon-text-medium: rhythm(.5) rhythm(2) rhythm(.5) rhythm(1.5);
+$padding-button-icon-text-large: rhythm(1) rhythm(2) rhythm(1) rhythm(1.5);
+
+$padding-button-icon-small: rhythm(1);
+$padding-button-icon-large: rhythm(1.5);
+
 //---------------------------------------------------------------
 // PRIMARY
 //---------------------------------------------------------------
@@ -27,7 +37,7 @@ $color-text-button-secondary-solid-active: $color-light-stronger;
 
 $color-background-button-secondary-solid: $color-dark-stronger;
 $color-background-button-secondary-solid-hover: $color-dark-stronger;
-$color-background-button-secondary-solid-active: $color-neutral-light;
+$color-background-button-secondary-solid-active: $color-neutral-regular;
 
 // basic
 $color-background-button-secondary-basic-hover: $color-neutral-lightest;
