--- a/apps/app/src/app/account/account-nua/client-dialog/client-dialog.component.html
+++ b/apps/app/src/app/account/account-nua/client-dialog/client-dialog.component.html
@@ -11,9 +11,9 @@
          fxLayout="row">
       <label for="client-title"
              fxFlex="24%">
-        {{ 'account.nua_client' | translate }}
+        {{ 'account.nua_client' | translate }}*
       </label>
-      <div fxFlex="70%">
+      <div fxFlex="auto">
         <stf-input id="client-title"
                    formControlName="title"
                    [validator]="clientForm.controls['title']"
@@ -27,20 +27,48 @@
          fxLayout="row">
       <label for="client-email"
              fxFlex="24%">
-        <span>{{ 'generic.email' | translate }}</span>
-        <svg-icon class="email-info"
+        <span>{{ 'generic.email' | translate }}*</span>
+        <svg-icon class="info"
                   src="assets/icons/info.svg"
                   stfTooltip
                   stfTooltipText="account.email_info">
         </svg-icon>
       </label>
-      <div fxFlex="70%">
+      <div fxFlex="auto">
         <stf-input id="client-email"
                    formControlName="email"
                    [validator]="clientForm.controls['email']"
                    [validation_messages]="validationMessages.email"
                    [isLessen]="true">
         </stf-input>
+      </div>
+    </div>
+
+    <div class="mb-40">
+      <div fxLayout="row">
+        <label for="client-webhook"
+               fxFlex="24%">
+          <span>{{ 'account.nua_webhook' | translate }}</span>
+          <svg-icon class="info"
+                    src="assets/icons/info.svg"
+                    stfTooltip
+                    stfTooltipText="account.nua_webhook.help">
+          </svg-icon>
+        </label>
+        <div fxFlex="auto">
+          <stf-input id="client-webhook"
+                     formControlName="webhook"
+                     [isLessen]="true">
+          </stf-input>
+        </div>
+      </div>
+      <div class="hint">
+        <ncom-hint label="Learn more about webhooks">
+          <p>If webhook is defined, anytime a new result is available, Nuclia will make a <code>POST</code> call to this
+            URL, sending the result as payload.</p>
+          <a href="https://docs.nuclia.dev/docs/understanding/intro#use-a-webhook"
+             target="_new">Learn more</a>
+        </ncom-hint>
       </div>
     </div>
 
