--- a/apps/app/src/app/account/account-nua/client-dialog/client-dialog.component.scss
+++ b/apps/app/src/app/account/account-nua/client-dialog/client-dialog.component.scss
@@ -32,7 +32,7 @@
     font-weight: var(--stf-font-weight-semibold);
   }
 
-  .email-info {
+  .info {
     vertical-align: middle;
     margin-left: 6px;
   }
@@ -42,5 +42,8 @@
     &-select {
       min-width: 305px;
     }
+  }
+  .hint {
+    margin-top: rythm(0.5);
   }
 }
