Fix background color for sistema button secondary basic
Allow to use them on grey background

--- a/apps/sistema-demo/src/app/sistema-pages/sistema-buttons/sistema-buttons.component.html
+++ b/apps/sistema-demo/src/app/sistema-pages/sistema-buttons/sistema-buttons.component.html
@@ -89,7 +89,7 @@
                      [disabled]="disabledState"
                      (click)="clickOn($event)">Solid</pa-button>
         </div>
-        <div class="pa-buttons-block">
+        <div class="pa-buttons-block dashboard-background">
           <pa-button
             kind="secondary"
             aspect="basic"
