--- a/apps/app/src/styles.scss
+++ b/apps/app/src/styles.scss
@@ -1,6 +1,8 @@
-@import 'libs/pastanaga/src/lib/styles/once';
-@import 'libs/pastanaga/src/lib/styles/fonts';
+@import '../../../libs/sistema/theme/fonts';
+@import '../../../libs/pastanaga-angular/projects/pastanaga-angular/src/styles/core';
 @import 'app/styles/css-variables';
+// To be removed once dashboard app will be entirely migrated to pastanaga-angular
+@import 'libs/pastanaga/src/lib/styles/once-light';
 
 html,
 body {
